adjusting comment nesting

--- a/privacy.html
+++ b/privacy.html
@@ -33,6 +33,7 @@
       <input type="checkbox" id="lists" name="lists" value="{{page.list.id}}">
       <label for="lists">{% filter ak_text:"opt_in" %}Keep me updated with emails about this and other campaigns{% endfilter %}</label>
     </div>
-    {% endif %} -->
+    -->
+    {% endif %}
 
 </div>
