--- a/privacy.html
+++ b/privacy.html
@@ -7,12 +7,26 @@
     <!-- we need to capture data from opt-outs, to figure out what % of people take action without joining -->
 
     <div id="ak-fieldbox-privacy_checkbox" class="input-radio margin-bottom-normal">
-      <p class="privacy-opt_in-text text-small margin-bottom-small">{{privacy_text.checkbox|safe}}</p>
+<!--      <p class="privacy-opt_in-text text-small margin-bottom-small">{{privacy_text.checkbox|safe}}</p>
       <input type="checkbox" id="privacy_checkbox" name="privacy" value="{{privacy_text.checkbox_hash}}">
       <label for="privacy_checkbox">{% filter ak_text:"privacy-opt_in-radio-yes" %}I'm in{% endfilter %}</label>
       &nbsp;&nbsp;
       <!-- <input type="radio" id="privacy_checkbox_optout" name="privacy" required>
       <label for="privacy_checkbox_optout">{% filter ak_text:"privacy-opt_in-radio-no" %}No{% endfilter %}</label> -->
+
+      <input type="radio" id="privacy_yes" name="privacy" value="{{privacy_text.checkbox_hash}}"><label for="privacy_yes">{{privacy_text.checkbox|safe}}</label>
+      <input type="radio" id="privacy_no" name="privacy" value="No"><label for="privacy_no">No</label>
+<!--
+
+
+radio yes {{privacy_text.checkbox|safe}}
+if selected then also action_opt_in = 1
+
+radio no
+if selected action_opt_in = 0
+-->
+
+
     </div>
     {% elif privacy_text.notice %}
         <input type="hidden" name="required" value="privacy">
