--- a/privacy.html
+++ b/privacy.html
@@ -16,7 +16,7 @@
 
       <input type="radio" id="privacy_yes" name="privacy" value="{{privacy_text.radio_hash}}"><label for="privacy_yes">{{privacy_text.radio|safe}}</label><br>
       <input type="radio" id="privacy_no" name="privacy" value="No"><label for="privacy_no">No</label>
-<input type="hidden" id="action_opt_in" value="" />
+<input type="hidden" id="action_opt_in" name="action_opt_in" value="" />
 <script type="text/javascript">
 $( document ).ready(function() {
 
