--- a/privacy.html
+++ b/privacy.html
@@ -1,7 +1,6 @@
 {% load actionkit_tags %}
 <div class="ak-privacy ak-errs-below">
     {% if privacy_text.radio %}
-    <!-- input type="hidden" name="required" value="privacy" -->
 
     <!-- "privacy" can only have a value of the AK hash, not null, not anything else -->
     <!-- we need to capture data from opt-outs, to figure out what % of people take action without joining -->
@@ -11,7 +10,7 @@
       <input type="checkbox" id="privacy_checkbox" name="privacy" value="{{privacy_text.checkbox_hash}}">
       <label for="privacy_checkbox">{% filter ak_text:"privacy-opt_in-radio-yes" %}I'm in{% endfilter %}</label>
       &nbsp;&nbsp;
-      <!-- <input type="radio" id="privacy_checkbox_optout" name="privacy" required>
+      <!-- <input type="radio" id="privacy_checkbox_optout" name="privacy">
       <label for="privacy_checkbox_optout">{% filter ak_text:"privacy-opt_in-radio-no" %}No{% endfilter %}</label> -->
 
       <input type="radio" id="privacy_yes" name="privacy" value="{{privacy_text.radio_hash}}"><label for="privacy_yes">{{privacy_text.radio|safe}}</label><br>
