--- a/privacy.html
+++ b/privacy.html
@@ -12,7 +12,7 @@
       &nbsp;&nbsp;
       <!-- <input type="radio" id="privacy_checkbox_optout" name="privacy">
       <label for="privacy_checkbox_optout">{% filter ak_text:"privacy-opt_in-radio-no" %}No{% endfilter %}</label> -->
-
+			<p>{% filter ak_text:"privacy-intro" %}I agree to 350.org contacting me about important campaigns.{% endfilter %}</p>
       <input type="radio" id="privacy_yes" name="privacy" value="{{privacy_text.radio_optin_hash}}"><label for="privacy_yes">{{privacy_text.radio_optin|safe}}</label><br>
       <input type="radio" id="privacy_no" name="privacy" value="{{privacy_text.radio_optout_hash}}"><label for="privacy_no">{{privacy_text.radio_optout|safe}}</label>
 <!--<input type="hidden" id="action_opt_in" name="action_opt_in" value="" />
