--- a/privacy.html
+++ b/privacy.html
@@ -26,7 +26,7 @@
 		        }
 		    }
 	    </script>
-    <div id="ak-fieldbox-privacy_radio" class="input-radio margin-bottom-normal">
+    <div id="ak-fieldbox-privacy_radio" class="margin-bottom-normal">
 	    	<p>
 		    	{% filter ak_text:"privacy-intro" %}I agree to 350.org contacting me about important campaigns.{% endfilter %}		    	
 	    	</p>
@@ -44,7 +44,7 @@
             </label>
         </div>
 
-        <div id="really-opt-out" class="ak-nodisplay">
+        <div id="really-opt-out" class="ak-nodisplay" style="display: none;">
             {% filter ak_text:"really_optout" %}
                 Are you sure? If you do choose to keep up to date with us, we'll offer you additional activism opportunities and you can unsubscribe at any time.
             {% endfilter %}
