underscores, suzi. underscores!

--- a/privacy.html
+++ b/privacy.html
@@ -28,7 +28,7 @@
 	    </script>
     <div id="ak-fieldbox-privacy_radio" class="margin-bottom-normal">
 	    	<p><strong>
-		    	{% filter ak_text:"privacy-intro" %}I'd like to receive email updates from 350.org about ways I can make a difference.{% endfilter %}		    	
+		    	{% filter ak_text:"privacy_intro" %}I'd like to receive email updates from 350.org about ways I can make a difference.{% endfilter %}		    	
 	    	</strong></p>
         <div>
             <label for="privacy_optin">
