--- a/wrapper.html
+++ b/wrapper.html
@@ -174,7 +174,7 @@ jQuery(document).ready(function(){
 {% endif %}
 
 {% comment %}
-	Font loading code — checks for CPF fonts, then checks for language/writing system, then checks for CTF,
+	Font loading code — checks for custom page field fonts, then checks for language/writing system, then checks for CTF,
 {% endcomment %}
 
 {% autoescape off %}
