--- a/user_form.html
+++ b/user_form.html
@@ -1,5 +1,4 @@
 {% load actionkit_tags smartif switchcase %}
-{% filter remove_blank_lines %}
 
 {% comment %}
 
@@ -26,17 +25,18 @@
 {% field_order name email prefix first_name middle_name last_name suffix address1 address2 city state postal zip region  country phone %}
 {% hide_by_default prefix first_name middle_name last_name suffix phone address1 address2 city state region zip %}
 
-{% for field in user_fields %}
-	{% switch field.field_name %}
-	{% case 'country' %}
+{% filter remove_blank_lines %}
+  {% for field in user_fields %}
+  	{% switch field.field_name %}
+  	{% case 'country' %}
 	<div id="id_{{ field.field_name }}_box" class="input-select ak-input-type-{{ field.type }} {% if field.field_name|is_in:context.required %}required{% endif %}">
 		<label for="id_{{ field.field_name }}">{{ field.label_text }}</label>
-		{% include "./country_select.html" %}
+		  {% include "./country_select.html" %}
 	</div>
-	{% case 'state' %}
+	  {% case 'state' %}
 	<div id="id_{{ field.field_name }}_box" class="input-select ak-input-type-{{ field.type }} {% if field.field_name|is_in:context.required %}required{% endif %}">
 		<label for="id_{{ field.field_name }}">{{ field.label_text }}</label>
-		{% include "./state_select.html" %}
+		  {% include "./state_select.html" %}
 	</div>
     {% else %}
 	<div id="id_{{ field.field_name }}_box" class="input-{{field.input}} ak-input-type-{{ field.type }} {% if field.field_name|is_in:context.required %}required{% endif %}">
@@ -44,22 +44,22 @@
 		{{ field.input_html }}
 	</div>
     {% endswitch %}
-{% endfor %}
+  {% endfor %}
 
 <div class="honey" style="display: none">
   <input name="action_honey">
 </div>
 
-{% if 'country'|is_in:fields %}
+  {% if 'country'|is_in:fields %}
   <input type="hidden" name="auto_country" value="1">
   <style type="text/css">
     /* Ensure that, if there's no JavaScript, the global-friendly fields show
      * rather than the US-only ones */
     #id_zip_box, #id_state_box { display: none; }
   </style>
-{% else %}
+  {% else %}
   <input type="hidden" name="country" value="United States">
-{% endif %}
+  {% endif %}
 {% endfilter %}
 
 {% if page.custom_fields.form_include_phone %}
@@ -74,19 +74,55 @@
 
 {% if page.custom_fields.form_include_partner %}
 <div id="partner-share" class="input checkbox input-checkbox">
-<input type="checkbox" name="action_share_with_partners" value="{{ page.custom_fields.form_include_partner }}" id="include-partner" {% if page.custom_fields.form_include_partner_checked %}checked="checked"{% endif %} />&nbsp;
-<label for="include-partner">
+  <input type="checkbox" name="action_share_with_partners" value="{{ page.custom_fields.form_include_partner }}" id="include-partner" {% if page.custom_fields.form_include_partner_checked %}checked="checked"{% endif %} />&nbsp;
+  <label for="include-partner">
 {% if page.custom_fields.form_include_partner_intro_text %}{{ page.custom_fields.form_include_partner_intro_text }} {% else %}
 {% filter ak_text:"general_partner_get_updates" %}Get updates from{% endfilter %} {{ page.custom_fields.form_include_partner }}
 {% endif %}
-</label>
+  </label>
 </div>
 {% endif %}
-<script type="text/javascript">
-$(document).ready(function(){
-$("#partner-share").addClass("appended").insertBefore("#form input.submit");
-});
-</script>
+
+{% if page.custom_fields.form_additional_fields %}
+  <div class="form-additional-html">
+    {{ page.custom_fields.form_additional_fields }}
+  </div>
+{% endif %}
+
+{% if not page.type == "Call" and not page.type == "Donation" and not page.type == "Event" and not page.type == "LTE"%}
+<div class="input-wrapper input-submit">
+  <button type="submit" class="submit button-primary">
+  {% if page.custom_fields.form_submit_button_text %}
+    {{ page.custom_fields.form_submit_button_text }}
+  {% else if page.type == "Petition" %}
+    {% filter ak_text:'petition_submit_button' %}Sign{% endfilter %}
+  {% else if page.type == "Letter" %}
+    {% filter ak_text:"letter_submit_button" %}Send Your Message{% endfilter %}
+  {% else if page.type == "Signup" %}
+    {% filter ak_text:"signup_submit_button" %}Sign Up{% endfilter %}
+  {% else if page.type == "Survey" %}
+    {% filter ak_text:"general_submit" %}Submit{% endfilter %}
+  {% else if %}
+    {% filter ak_text:'general_submit' %}Submit{% endfilter %}
+  {% endif %}
+  </button>
+</div>
+{% endif %}
+
+
+{% if page.custom_fields.form_short_toc %}
+<div id="action-toc" class="text-small icon-before icon-faded" data-icon="&#xE93E;">
+  {% if page.custom_fields.form_short_toc %}
+    {{ page.custom_fields.form_short_toc }}
+  {% elif page.custom_fields.form_opt_in %}
+    {% filter ak_text:"general_secure_signup" %}350.org respects your privacy.{% endfilter %}
+  {% elif page.custom_fields.page_is_c4 %}
+    {% filter ak_text:"general_default_toc_c4" %}350 Action will send you updates and notifications when you can make a difference.{% endfilter %}
+  {% else %}
+    {% filter ak_text:"general_default_toc" %}350.org will send you updates and notifications when you can make a difference.{% endfilter %}
+  {% endif %}
+</div>
+{% endif %}
 
 {% include "./privacy.html" %}
 {% if page.custom_fields.form_opt_in %}
