--- a/petition.html
+++ b/petition.html
@@ -69,7 +69,7 @@
 			{% include "./user_form_wrapper.html" %}
 			{% endautoescape %}
 			<ul style="display:none;" id="ak-errors"><li></li></ul>
-	
+	{% endif %}
 			<p class="no-js-hidden petition-text-link"><a href="" class="js-modal text-small icon-before icon-faded text-underline-none" data-icon="&#xe913;" data-modal-source="#petition-text">{% filter ak_text:'petition_link_text' %}View the full petition text.{% endfilter %}</a></p>
 
 		</form>
