move expanded privacy notice to footer

--- a/privacy.html
+++ b/privacy.html
@@ -1,55 +1,52 @@
 {% load actionkit_tags %}
-<div class="ak-privacy ak-errs-below text-small">
+<div class="ak-privacy ak-errs-below">
+{% comment %}
+  "privacy" can only have a value of the AK hash, not null, not anything else.
+	We need to capture data from opt-outs, to figure out what % of people take action without joining.
+{% endcomment %}
 
-    <!-- "privacy" can only have a value of the AK hash, not null, not anything else -->
-    <!-- we need to capture data from opt-outs, to figure out what % of people take action without joining -->
+{% if privacy_text.notice %}
+  <div id="ak-fieldbox-privacy_notice">
+      <input type="hidden" id="privacy_notice" name="privacy" value="{{privacy_text.notice_hash}}">
+      <!-- {{privacy_text.notice|safe}} -->
+  </div>
+{% endif %}
 
-
-		{% if privacy_text.notice %}
-      <div id="ak-fieldbox-privacy_notice">
-          <input type="hidden" id="privacy_notice" name="privacy" value="{{privacy_text.notice_hash}}">
-          {{privacy_text.notice|safe}}
-      </div>
-    {% endif %}
-			<br>
-    {% if privacy_text.radio_optin and privacy_text.radio_optout %}
-	    <input type="hidden" name="require_opt_in" value="1">
-	    <script>
-		    function setOptIn(opted_in) {
-		        if (opted_in) {
-		            actionkit.utils.appendHiddenInput('lists', '{{ page.list.id }}');
-		            $('#really-opt-out').hide();
-		        }
-		        else {
-		            $('input[name=lists]').remove()
-		            $('#really-opt-out').show();
-		        }
-		    }
-	    </script>
-    <div id="ak-fieldbox-privacy_radio" class="margin-bottom-normal">
-	    	<p><strong>
-		    	{% filter ak_text:"privacy_intro" %}I'd like to receive email updates from 350.org about ways I can make a difference.{% endfilter %}
-	    	</strong></p>
-        <div>
-            <label for="privacy_optin">
-                <input type="radio" id="privacy_optin" name="privacy" value="{{privacy_text.radio_optin_hash}}" onclick="setOptIn(true)">
-                {{privacy_text.radio_optin|safe}}
-            </label>
-        </div>
-
-        <div>
-            <label for="privacy_optout">
-                <input type="radio" id="privacy_optout" name="privacy" value="{{privacy_text.radio_optout_hash}}" onclick="setOptIn(false)">
-                {{privacy_text.radio_optout|safe}}
-            </label>
-        </div>
-
-        <div id="really-opt-out" class="ak-nodisplay padding-tiny bg-teal" style="display:none;">
-            {% filter ak_text:"really_optout" %}
-                Are you sure? If you do choose to keep up to date with us, we'll offer you additional activism opportunities and you can unsubscribe at any time.
-            {% endfilter %}
-        </div>
+{% if privacy_text.radio_optin and privacy_text.radio_optout %}
+  <input type="hidden" name="require_opt_in" value="1">
+  <script>
+    function setOptIn(opted_in) {
+      if (opted_in) {
+        actionkit.utils.appendHiddenInput('lists', '{{ page.list.id }}');
+        $('#really-opt-out').hide();
+      }
+      else {
+        $('input[name=lists]').remove()
+        $('#really-opt-out').show();
+      }
+    }
+  </script>
+  <div id="ak-fieldbox-privacy_radio" class="margin-bottom-normal input-radio">
+		<input type="hidden" name="privacy" value="{% filter ak_text:'privacy_intro' %}I'd like to receive email updates from 350.org about ways I can make a difference.{% endfilter %}">
+  	<p class="text-small">
+    	{% filter ak_text:"privacy_intro" %}I'd like to receive email updates from 350.org about ways I can make a difference.{% endfilter %}
+  	</p>
+    <div>
+			<input type="radio" id="privacy_optin" name="privacy" value="{{privacy_text.radio_optin_hash}}" onclick="setOptIn(true)">
+      <label for="privacy_optin">{{privacy_text.radio_optin|safe}}</label>
     </div>
-    {% endif %}
+
+    <div>
+			<input type="radio" id="privacy_optout" name="privacy" value="{{privacy_text.radio_optout_hash}}" onclick="setOptIn(false)">
+      <label for="privacy_optout">{{privacy_text.radio_optout|safe}}</label>
+    </div>
+
+    <div id="really-opt-out" class="ak-nodisplay padding-tiny bg-teal" style="display:none;">
+      {% filter ak_text:"really_optout" %}
+          Are you sure? If you do choose to keep up to date with us, we'll offer you additional activism opportunities and you can unsubscribe at any time.
+      {% endfilter %}
+    </div>
+  </div>
+  {% endif %}
 
 </div>
