--- a/signup.html
+++ b/signup.html
@@ -3,6 +3,22 @@
 
 {% block content %}
 
+<script type="text/javascript">
+	function urlParam(name){
+		var results = new RegExp('[\\?&]' + name + '=([^&#]*)').exec(window.location.href);
+		if (!results) { return 0; }
+		return results[1] || 0;
+	}
+
+	var oneclick = urlParam('oneclick');
+
+	$( document ).ready(function() {
+		if (oneclick){
+			$('#action-lead div').css('visibility', 'hidden');
+		}
+	});
+</script>
+
 <section id="action-lead" class="section action-lead title-section width-medium padding-medium bg-{% if page.custom_fields.page_background_color %}{{ page.custom_fields.page_background_color }}{% else %}white{% endif %}{% if page.custom_fields.page_background_image %}-fade{% endif %}">
 	<div class="section-inner">
 		<div id="action-header" class="{% if page.custom_fields.page_layout_style == 'expanded' %}c10{% else %}c6{% endif %} ct10 cm10 c-wide">
@@ -81,6 +97,36 @@
 				{% endif %}
 			</div>
 		</form>
+		
+<script type="text/javascript">
+	function urlParam(name){
+		var results = new RegExp('[\\?&]' + name + '=([^&#]*)').exec(window.location.href);
+		if (!results) { return 0; }
+		return results[1] || 0;
+	}
+
+	var oneclick = urlParam('oneclick');
+	var email = urlParam('email');
+
+
+	function oneClickOptIn() {
+
+	    if (email) {
+		    	document.getElementById("id_email").value = decodeURIComponent(email);
+		    	var email_entered = true;
+		  }
+
+		  if(email_entered) {
+	        document.getElementById("action-form").submit();
+	    }
+	}
+
+	if (oneclick){
+		oneClickOptIn();
+	}
+</script>
+
+		
 		{% include "./social_plugins.html" %}
 		<div id="recent-actions" class="c6 ct6 cm10 c-wide text-small">
 			{% include "./recentactions.html" %}
