--- a/user_form.html
+++ b/user_form.html
@@ -119,7 +119,7 @@
 {% endif %}
 
 <div class="general-privacy-notice text-small2">
-  <p class="icon-before icon-faded" data-icon="&#xE93E;">By taking action, you agree to our <a href="/privacy">privacy policy</a>.</p>
+  <p class="icon-before icon-faded" data-icon="&#xE93E;">By taking action, we will store your information according to our <a href="/privacy">privacy policy</a>.</p>
 </div>
 
 
