add spacing below short_toc

--- a/user_form_wrapper.html
+++ b/user_form_wrapper.html
@@ -14,11 +14,11 @@
 
 <div id="unknown_user" class="user-form ak-errs-below form-style-labelabove">
   {% if page.custom_fields.form_short_toc %}
-  <div id="action-toc" class="text-small icon-before icon-faded" data-icon="▶︎">
+  <div id="action-toc" class="text-small icon-before icon-faded margin-bottom-none" data-icon="▶︎">
     {{ page.custom_fields.form_short_toc }}
   </div>
   {% endif %}
-  
+
  {% include "./user_form.html" %}
  <div style="display: none">
   <input name="user_honey">
