--- a/privacy.html
+++ b/privacy.html
@@ -47,21 +47,23 @@
 'Slovenia',
 'Spain',
 'Sweden',
-'United Kingdom']
+'United Kingdom'];
 
- 	$("#country").on('change',function(){
+$(document).ready(function(){
+	var countrySelect = $("#country");
+ 	countrySelect.on('change',function(){
 		var selectedCountry = $(this).val()
 		if ( euCountries.indexOf(selectedCountry) > -1 ){
-			//$(".privacy-EU").show();
-			//$(".privacy-nonEU").hide();
-			//hidePrivacy();
-			console.log('show EU privacy');
+			//$(".privacy-eu").show();
+			$(".privacy-non_eu").hide();
+			//console.log('show EU privacy');
 		} else {
-			//$(".privacy-EU").hide();
-			//$(".privacy-nonEU").show();
-			console.log('show non-EU privacy');
+			//$(".privacy-eu").hide();
+			$(".privacy-non_eu").show();
+			//console.log('show non-EU privacy');
 		}
 	});
+});
   </script>
 	<style>
 	#action-toc + .ak-privacy{
@@ -71,32 +73,30 @@
 	#really-opt-out{
 		transition:300ms all;}
 	</style>
+	<div class="privacy-eu">
 	{% if privacy_text.notice %}
-  <div id="ak-fieldbox-privacy_notice" class="text-small2 margin-bottom-small">
-    <input type="hidden" id="privacy_notice" name="privacy" value="{{privacy_text.notice_hash}}">
-		<p>{{privacy_text.notice|safe}}</p>
-  </div>
+	  <div id="ak-fieldbox-privacy_notice" class="text-small2 margin-bottom-small">
+	    <input type="hidden" id="privacy_notice" name="privacy" value="{{privacy_text.notice_hash}}">
+			<p>{{privacy_text.notice|safe}}</p>
+	  </div>
 	{% endif %}
-  <div id="ak-fieldbox-privacy_radio" class="margin-bottom-normal input-radio text-lineheight-small">
-    <div>
-			<input type="radio" id="privacy_optin" name="privacy" value="{{privacy_text.radio_optin_hash}}" onclick="setOptIn(true)">
-      <label for="privacy_optin">{{privacy_text.radio_optin|safe}}</label>
-    </div>
-    <div>
-			<input type="radio" id="privacy_optout" name="privacy" value="{{privacy_text.radio_optout_hash}}" onclick="setOptIn(false)">
-      <label for="privacy_optout">{{privacy_text.radio_optout|safe}}</label>
-    </div>
-  </div>
-  <div id="really-opt-out" class="ak-nodisplay margin-bottom-normal padding-tiny text-small bg-dkgray-trans notch" style="display:none;">
-    <p>{% filter ak_text:"really_optout" %}
-      Are you sure? Email is how the global climate movement is able to stay organised. You can always unsubscribe!
-    {% endfilter %}</p>
-		<p><label for="privacy_optin" class="button button-small button-secondary bg-teal">Yes, keep me involved</label></p>
-  </div>
-
-
-
-
+	  <div id="ak-fieldbox-privacy_radio" class="margin-bottom-normal input-radio text-lineheight-small">
+	    <div>
+				<input type="radio" id="privacy_optin" name="privacy" value="{{privacy_text.radio_optin_hash}}" onclick="setOptIn(true)">
+	      <label for="privacy_optin">{{privacy_text.radio_optin|safe}}</label>
+	    </div>
+	    <div>
+				<input type="radio" id="privacy_optout" name="privacy" value="{{privacy_text.radio_optout_hash}}" onclick="setOptIn(false)">
+	      <label for="privacy_optout">{{privacy_text.radio_optout|safe}}</label>
+	    </div>
+	  </div>
+	  <div id="really-opt-out" class="ak-nodisplay margin-bottom-normal padding-tiny text-small bg-dkgray-trans notch" style="display:none;">
+	    <p>{% filter ak_text:"really_optout" %}
+	      Are you sure? Email is how the global climate movement is able to stay organised. You can always unsubscribe!
+	    {% endfilter %}</p>
+			<p><label for="privacy_optin" class="button button-small button-secondary bg-teal">Yes, keep me involved</label></p>
+	  </div>
+	</div>
 {% endif %}
 
 </div>
