add text-color-override to fix link colors
in tandem with an update to the ak-v3.css stylesheet

--- a/event_attend.html
+++ b/event_attend.html
@@ -129,7 +129,7 @@
 </div>
 
 <div id="event-attend-details" class="section width-normal padding-none">
-	<div class="section-inner bg-white">
+	<div class="section-inner bg-white text-color-override">
 		<div class="padding-medium margin-bottom-none">
 		{% if campaign.show_public_description %}
 			{% autoescape off %}
