text re-ordering
swapping the order of the sentences in the non-EU privacy disclaimer

--- a/user_form.html
+++ b/user_form.html
@@ -119,7 +119,10 @@
 {% endif %}
 
 <div class="general-privacy-notice text-small2">
-  <p class="icon-before icon-faded" data-icon="&#xE93E;">By taking action, we will store your information according to our <a href="/privacy">privacy policy</a>. <span style="display:none;" class="privacy-non_eu">350 will send you email updates when you can make a difference.</span></p>
+  <p class="icon-before icon-faded" data-icon="&#xE93E;">
+    <span style="display:none;" class="privacy-non_eu">350 will send you email updates when you can make a difference.</span>
+    By taking action, we will store your information according to our <a href="/privacy">privacy policy</a>.
+  </p>
 </div>
 
 
