whoops, close that <a> tag

--- a/user_form.html
+++ b/user_form.html
@@ -121,7 +121,7 @@
 <div class="general-privacy-notice text-small2">
   <p class="icon-before icon-faded" data-icon="&#xE93E;">
     <span style="display:none;" class="privacy-non_eu">350 will send you email updates when you can make a difference.</span>
-    By taking this action, you are agreeing to our <a href="https://350.org/tos">terms of service</a> and <a href="https://350.org/privacy">privacy policy</a>. You can <a href="https://act.350.org/unsubscribe/unsubscribe/">at any time.
+    By taking this action, you are agreeing to our <a href="https://350.org/tos">terms of service</a> and <a href="https://350.org/privacy">privacy policy</a>. You can <a href="https://act.350.org/unsubscribe/unsubscribe/">unsubscribe</a> at any time.
   </p>
 </div>
 
