so yeah we really otta hide this lists thing as the default...

--- a/privacy.html
+++ b/privacy.html
@@ -8,6 +8,8 @@
 {% if privacy_text.radio_optin and privacy_text.radio_optout %}
   <input type="hidden" name="require_opt_in" value="1">
   <script>
+	  jQuery('input[name=lists]').remove();
+	  
     function setOptIn(opted_in) {
       if (opted_in) {
         actionkit.utils.appendHiddenInput('lists', '{{ page.list.id }}');
