no really hide that shit

--- a/user_form.html
+++ b/user_form.html
@@ -135,5 +135,5 @@
 	</label>
 </div>
 {% else %}
-<input name="lists" value="{{ page.list.id }}" type="hidden"/>
+<!--<input name="lists" value="{{ page.list.id }}" type="hidden"/>-->
 {% endif %}
