--- a/privacy.html
+++ b/privacy.html
@@ -67,6 +67,19 @@ jQuery(document).ready(function(){
 			//console.log('show non-EU privacy');
 		}
 	});
+	
+	jQuery("form").submit(function (e) {
+    // If an opt-in option is not selected, prevent submit
+    if (!jQuery('input[name="privacy"]').is(':checked')) {
+        jQuery('.privacy-eu').addClass('ak-err');
+        jQuery('.privacy-eu ul').show();
+        e.preventDefault();
+    } else {
+        jQuery('.privacy-eu').removeClass('ak-err');
+        jQuery('.privacy-eu ul').hide();
+    }
+  });
+	
 });
   </script>
 	<style>
@@ -93,6 +106,7 @@ jQuery(document).ready(function(){
 				<input type="radio" id="privacy_optout" name="privacy" value="{{privacy_text.radio_optout_hash}}" onclick="setOptIn(false)">
 	      <label for="privacy_optout">{{privacy_text.radio_optout|safe}}</label>
 	    </div>
+	    <ul class="ak-err" style="display: none;"><li>Please select an option above.</li></ul>
 	  </div>
 	  <div id="really-opt-out" class="ak-nodisplay margin-bottom-normal padding-tiny text-small bg-dkgray-trans notch" style="display:none;">
 	    <p>{% filter ak_text:"really_optout" %}
